cluster-config/infra/traefik/ingressroute-vault.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.local`)
      kind: Rule
      services:
        - name: vault
          port: 8200
  tls: {}
